<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Blue">Blue</string>
    <string name="Gold">Gold</string>
    <string name="Green">Green</string>
    <string name="None">None</string>
    <string name="Orange">Orange</string>
    <string name="Pink">Pink</string>
    <string name="Purple">Purple</string>
    <string name="Red">Red</string>
    <string name="Silver">Silver</string>
    <string name="White">White</string>
    <string name="_is_typing_">is typing...</string>
    <string name="_u_email_is_confirmed_u_">Email is Confirmed</string>
    <string name="_u_email_is_unconfirmed_u_">Email is Unconfirmed</string>
    <string name="abm_find_people_disable_caps">DISABLE</string>
    <string name="abm_find_people_done_caps">DONE</string>
    <string name="abm_find_people_has_number">Use your phone contacts to help you find your friends. Your information will be kept private and will not be shared</string>
    <string name="abm_find_people_matches_bar_multiple_matches">We found people you know</string>
    <string name="abm_find_people_matches_bar_no_matches">"Your friends aren't on Kik yet"</string>
    <string name="abm_find_people_matches_bar_one_match">We found someone you know</string>
    <string name="abm_find_people_matches_bar_view_all_caps">VIEW ALL</string>
    <string name="abm_find_people_search_header">Invite Friends to Kik</string>
    <string name="abm_friends_will_also_find_you">Your friends will also be able to find you</string>
    <string name="abm_friends_will_find_you">Your friends will be able to find you</string>
    <string name="abm_friends_wont_find_you">"Your friends won't be able to find you"</string>
    <string name="abm_matching_dialog_text">Upload your address book and contact info to tell you which of your friends already have Kik?</string>
    <string name="abm_opt_in_prompt">Use your phone contacts to find friends already on Kik.</string>
    <string name="abm_options_dialog_confirm_hint">"You will be able to find your friends but your friends won't be able to find you"</string>
    <string name="abm_options_dialog_hint">People who have your phone or email will be able to find you</string>
    <string name="abm_options_dialog_prompt">Allow friends to find me</string>
    <string name="abm_privacy_options_title">Privacy Options</string>
    <string name="about_copyright_text">Copyright © 2018 Kik Interactive Inc All rights reserved</string>
    <string name="about_copyright_text_extended">"Copyright © 2018 Kik Interactive Inc All rights reserved

Kik Interactive Inc
420 Weber St North
Suite I
Waterloo, ON
Canada
N2L 4E7"</string>
    <string name="about_copyright_text_extended_link">"Copyright © 2018 Kik Interactive Inc All rights reserved

Kik Interactive Inc
420 Weber St North
Suite I
Waterloo, ON
Canada
N2L 4E7

http://help.kik.com"</string>
    <string name="about_kik">About Kik</string>
    <string name="about_update_kik">Kik Version</string>
    <string name="account_change_configuration">Configuration</string>
    <string name="action_header">Action</string>
    <string name="activity_conversations_block_chat">Block</string>
    <string name="activity_conversations_chat_info">Info</string>
    <string name="activity_conversations_delete_chat">Delete</string>
    <string name="activity_conversations_leave_chat">Leave</string>
    <string name="activity_conversations_mute_chat">Mute</string>
    <string name="activity_conversations_open_chat">Open</string>
    <string name="activity_conversations_report_chat">Report</string>
    <string name="activity_conversations_start_chatting">Chat</string>
    <string name="activity_conversations_unmute_chat">Unmute</string>
    <string name="activity_new_message_hint">Type a message...</string>
    <string name="activity_viewpicture_load_fail">Failed to load full image. Please try again in a minute</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="add_group_hint">Who do you want to add?</string>
    <string name="add_payment_screen_title">New Card</string>
    <string name="added_you_attribution_message">%1$s started chatting with you</string>
    <string name="adding_to_convo_fail_message">Adding to conversation failed. Please try again</string>
    <string name="address_book_cant_access_contacts">"Your address book settings have been updated but Kik can't access your address book. Please check that Kik has access to Contacts in your device Privacy Settings"</string>
    <string name="address_book_matching_settings_were_updated">Address book matching settings were updated</string>
    <string name="admins">Admins</string>
    <string name="adress_opt_out_warning">Are you sure? You will have to find your friends manually</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="alert_disable_notify_for_new_people">"Are you sure you want to disable notifications for new chats? You won't be notified when new people message you"</string>
    <string name="allow_and_continue">Allow and Continue</string>
    <string name="allow_contacts_access">Please Allow Contacts Access</string>
    <string name="change_led_color_summary">Change LED color, only colors supported by your phone will work</string>
    <string name="change_password">Change Password</string>
    <string name="find_friends_caps">FIND FRIENDS</string>
    <string name="find_your_friends_on_kik">Find Your Friends on Kik</string>
    <string name="first_run_by_clicking_next_tos_and_privacy">"By tapping \"Next\" you agree to Kik's &lt;a href=\"http://www.kik.com/terms?v=%1$s\">terms&lt;/a> and &lt;a href=\"http://www.kik.com/privacy?v=%1$s\">privacy policy&lt;/a>"</string>
    <string name="instabug_str_add_photo">Select Image from Gallery</string>
    <string name="instabug_str_bug_header">Report a Problem</string>
    <string name="instabug_str_feedback_header">Suggest an Improvement</string>
    <string name="instabug_str_record_audio">Record a Voice Note</string>
    <string name="instabug_str_record_video">Take a screen recording</string>
    <string name="instabug_str_take_screenshot">Take a Screenshot</string>
    <string name="instabug_str_talk_to_us">Talk to us</string>
    <string name="not_now_caps">NOT NOW</string>
    <string name="play_sound_on_new_message">Play a sound when a new message is received</string>
    <string name="registration_phone_placeholder">Phone (Recommended)</string>
    <string name="title_birthday">Birthday</string>
    <string name="title_copyright">Legal</string>
    <string name="title_developers">Developers</string>
    <string name="title_email">Email</string>
    <string name="title_first_name">First Name</string>
    <string name="title_help">Help</string>
    <string name="title_help_about_us">Help &amp; About Us</string>
    <string name="title_kik_username">Your Kik Username</string>
    <string name="title_last_name">Last Name</string>
    <string name="title_led_color">LED Color</string>
    <string name="title_licenses">Licenses</string>
    <string name="title_logout">Log Out</string>
    <string name="title_name">Name</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_password">Password</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_sound">Sound</string>
    <string name="title_terms_of_service">Terms of Service</string>
    <string name="title_vibration">Vibration</string>
    <string name="title_your_account_info">Your Account</string>
    <string name="use_phone_contacts_find_friends_v2">Your phone contacts will be continuously synced so you can see who you know on Kik</string>
    <string name="vibrate_on_new_message">Vibrate when a new message is received</string>
    <string name="web_kik_support">http://kik.com/support.php</string>
    <string name="description_mute_new_chats_preference">Disable notifications for all new chats</string>
    <string name="kik_username">Username</string>
    <string name="title_community_guidelines">Community Standards</string>
    <string name="title_kin_wallet">KIN Wallet Preview</string>
    <string name="title_mute_new_chats">Mute New Chats</string>
    <string name="web_kik_community_guidelines">http://kik.com/standards</string>
</resources>