<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/title_notifications" android:key="@string/title_notifications"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:kik="http://schemas.android.com/apk/res-auto">
    <kik.arcane.widget.preferences.NotifySoundPreference android:enabled="true" android:title="@string/title_sound" android:key="kik.sound" android:summary="@string/play_sound_on_new_message" kik:pref_divider="none" />
    <kik.arcane.widget.preferences.VibratePreference android:enabled="true" android:title="@string/title_vibration" android:key="kik.vibrate" android:summary="@string/vibrate_on_new_message" kik:pref_divider="top" />
    <kik.arcane.widget.preferences.LEDNotificationPreference android:enabled="true" android:entries="@array/led_colors" android:title="@string/title_led_color" android:key="kik.led.color" android:summary="@string/change_led_color_summary" android:entryValues="@array/led_values" kik:pref_divider="top" />
    <kik.arcane.widget.preferences.NotifyNewPeoplePreference android:enabled="true" android:title="@string/title_mute_new_chats" android:key="kik.new.people.notify" android:summary="@string/description_mute_new_chats_preference" kik:pref_divider="full_bottom|top" />
    <kik.arcane.widget.preferences.KikNotificationHelpNotice android:enabled="true" android:key="kik.notice" />
</PreferenceScreen>