<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:kik="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/action_bar" layout="@layout/kik_back_button_clear" />
    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView android:id="@id/register_fields_scroll" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_below="@id/action_bar">
        <RelativeLayout android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <kik.arcane.chat.view.SetProfilePhotoView android:id="@id/set_profile_photo_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" />
            <kik.arcane.chat.view.ValidateableInputView android:id="@id/register_first_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/title_first_name" android:maxLength="32" android:layout_toRightOf="@id/set_profile_photo_view" android:layout_alignParentTop="true" android:inputType="textCapWords" kik:errorDrawable="@drawable/ic_error" />
            <kik.arcane.chat.view.ValidateableInputView android:id="@id/register_last_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/title_last_name" android:maxLength="32" android:layout_toRightOf="@id/set_profile_photo_view" android:layout_below="@id/register_first_name" android:inputType="textCapWords" kik:errorDrawable="@drawable/ic_error" />
            <kik.arcane.chat.view.ValidateableInputView android:id="@id/register_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/kik_username" android:singleLine="true" android:maxLength="20" android:layout_below="@id/register_last_name" android:inputType="textVisiblePassword" kik:successDrawable="@drawable/ic_checkmark" kik:errorDrawable="@drawable/ic_error" kik:progressDrawable="@drawable/indeterminate_input_spinner" />
            <kik.arcane.chat.view.AutoCompleteValidateableInputView android:id="@id/register_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/title_email" android:singleLine="true" android:layout_below="@id/register_username" android:inputType="textEmailAddress" android:imeOptions="actionNext" android:dropDownHeight="wrap_content" kik:successDrawable="@drawable/ic_checkmark" kik:errorDrawable="@drawable/ic_error" kik:progressDrawable="@drawable/indeterminate_input_spinner" />
            <kik.arcane.chat.view.ValidateableInputView android:id="@id/register_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/title_password" android:singleLine="true" android:layout_below="@id/register_email" android:inputType="textPassword" android:imeOptions="actionNext" kik:successDrawable="@drawable/ic_checkmark" kik:errorDrawable="@drawable/ic_error" />
            <kik.arcane.chat.view.ValidateableInputView android:id="@id/register_birthday" android:focusable="false" android:clickable="true" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/title_birthday" android:singleLine="true" android:layout_below="@id/register_password" android:inputType="none" />
            <kik.arcane.chat.view.ValidateableInputView android:id="@id/register_phone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/registration_phone_placeholder" android:singleLine="true" android:layout_below="@id/register_birthday" android:inputType="phone" />
            <Button android:id="@id/register_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:layout_marginBottom="8.0dip" android:text="@string/title_sign_up" android:layout_below="@id/register_phone" style="@style/KikButton.Hero" />
            <kik.arcane.widget.RobotoTextView android:gravity="center_horizontal" android:linksClickable="true" android:id="@id/tos_text" android:paddingBottom="12.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/first_run_by_clicking_next_tos_and_privacy" android:layout_below="@id/register_button" style="@style/KikTextView.Terms" />
        </RelativeLayout>
    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
    <FrameLayout android:id="@id/shadow" android:background="@drawable/nav_shadow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/action_bar" android:alpha="0.0" />
</RelativeLayout>