<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:kik="http://schemas.android.com/apk/res-auto" android:id="@id/scroll" android:clickable="true"
android:background="@color/bg"
android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical" android:id="@id/container" android:paddingTop="4.0dip" android:paddingBottom="32.0dip" android:clipToPadding="false" android:layout_width="fill_parent"
android:background="@color/bg"
android:layout_height="wrap_content">
		<kik.arcane.widget.RobotoTextView android:textSize="14.0sp" android:textColor="@color/white_to_black" android:layout_gravity="right" android:id="@id/not_now_sync_button" android:background="?selectableItemBackground" android:paddingLeft="12.0dip" android:paddingTop="16.0dip" android:paddingRight="12.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:text="@string/not_now_caps" android:maxLines="1" android:textAllCaps="true" kik:font_type="medium" />
		<ImageView android:layout_gravity="center_horizontal" android:id="@id/abm_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip"
android:tint="@color/arcane_white"
android:layout_marginBottom="8.0dip" android:src="@drawable/img_abm_large_logo" />
		<ImageView android:layout_gravity="center_horizontal" android:id="@id/abm_opted_out_big_device_phone_number_image" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"
android:tint="@color/arcane_white"
android:layout_marginTop="-8.0dip" android:src="@drawable/abm_large_device_logo" />
		<kik.arcane.widget.RobotoTextView android:textSize="23.0sp" android:textColor="@color/theme" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/find_friends_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="40.0dip" android:text="@string/find_your_friends_on_kik" />
		<kik.arcane.widget.RobotoTextView android:textSize="15.0sp" android:textColor="@color/arcane_white" android:gravity="center_horizontal" android:id="@id/abm_top_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="40.0dip" android:layout_marginBottom="16.0dip" android:text="@string/use_phone_contacts_find_friends_v2" />
		<kik.arcane.chat.view.ValidateableInputView android:layout_gravity="center" android:id="@id/abm_phone_number_field" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:hint="@string/registration_phone_placeholder" android:inputType="phone" />
		<Button android:layout_gravity="center_horizontal" android:id="@id/sync_contacts_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="12.0dip" android:text="@string/find_friends_caps" style="@style/KikButton.Hero" />
	</LinearLayout>
</ScrollView>
