<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/instabug_invocation_dialog_container" android:paddingLeft="24.0dip" android:paddingTop="40.0dip" android:paddingRight="24.0dip" android:paddingBottom="40.0dip" style="@style/InstabugDialogContainer"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/instabug_invocation_dialog_items_container_scrollView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <LinearLayout android:orientation="vertical" android:id="@id/instabug_invocation_dialog_items_container" android:background="?instabug_background_color" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="start|center" android:layout_gravity="center|left" android:id="@id/instabug_fragment_title" android:background="?instabug_background_color" android:layout_width="fill_parent" android:layout_marginBottom="20.0dip" style="@style/InstabugToolbarTitle" />
            <LinearLayout android:id="@id/instabug_option_talk_to_us" style="@style/InstabugDialogItemContainer">
                <ImageView android:src="@drawable/instabug_ic_talk_to_us" android:tint="?instabug_theme_tinting_color" style="@style/InstabugDialogItemImage" />
                <TextView android:id="@id/instabug_option_talk_to_us_text" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/instabug_str_talk_to_us" android:layout_weight="1.0" style="@style/InstabugDialogItemText" />
                <TextView android:textSize="12.0sp" android:id="@id/instabug_inbox_messages_count" android:layout_width="26.0dip" android:layout_height="26.0dip" android:layout_marginRight="10.0dip" style="@style/InstabugUnreadMessagesCountIcon" />
            </LinearLayout>
            <LinearLayout android:id="@id/instabug_option_report_bug" style="@style/InstabugDialogItemContainer">
                <ImageView android:src="@drawable/instabug_ic_report_bug" android:tint="?instabug_theme_tinting_color" style="@style/InstabugDialogItemImage" />
                <TextView android:id="@id/instabug_option_report_bug_text" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/instabug_str_bug_header" style="@style/InstabugDialogItemText" />
            </LinearLayout>
            <LinearLayout android:id="@id/instabug_option_send_feedback" style="@style/InstabugDialogItemContainer">
                <ImageView android:src="@drawable/instabug_ic_send_feedback" android:tint="?instabug_theme_tinting_color" style="@style/InstabugDialogItemImage" />
                <TextView android:id="@id/instabug_option_send_feedback_text" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/instabug_str_feedback_header" style="@style/InstabugDialogItemText" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/instabug_invocation_dialog_items_container_scrollView" layout="@layout/instabug_lyt_pbi" />
</RelativeLayout>